# Bookish-Python

./: pyproject.toml
bookish_python/engine/: constants.py  database_creator.py  main.py  main_archive.py  web.py  webmain.py
bookish_python/engine/templates/: addbook.html  books.html  checkin.html  checkout.html  delete_book_Id.html  edit_book_Id.html  edit_book_entry.html  homepage.html  index.html  info.html  layout.html  members.html
tests/: test_bookish_python.py
