[tool.poetry]
name = "Bookish-Python"
version = "0.1.0"
description = ""
authors = ["Trystan1 <trystan.jones@altran.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
